<resources>
    <string name="app_name">ZApp</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">closed</string>
    <string name="settings">setttings</string>
    <string name="about">about</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="media">Media</string>
    <string name="groups">Groups</string>
    <string name="payments">Payments</string>
    <string name="info">Info</string>

    <!--sign up strings-->
    <string name="sign_up_email">enter email here</string>
    <string name="sign_up_name">enter your name here</string>
    <string name="sign_up_password1">enter password here</string>
    <string name="sign_up_password2">retype your password</string>
    <string name="sign_up_button_text">Create Account</string>
    <string name="sign_up_account_exist">Already have an account</string>

    <!--sign in strings-->
    <string name="sign_in_button_text">Sign In</string>
    <string name="sign_in_forgot">Forgot Password</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in_logonID">Logon ID/ Email</string>
    <string name="sign_in_policy">Privacy Policy</string>
    <string name="play">Play</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--payments view strings-->
    <string name="payments_totalLabel">Amount</string>
    <string name="payments_total_amount_hint"> </string>
    <string name="payments_totalFieldHint">Enter Total Amount</string>
    <string name="payments_TitheCheckbox">Tithe</string>
    <string name="payments_OfferingCheckbox">Offering</string>
    <string name="payments_BuildingCheckbox">Building</string>
    <string name="payments_OtherCheckbox">Other</string>
    <string name="payments_TitheLabel">Tithe</string>
    <string name="payments_OfferingLabel">Offering</string>
    <string name="payments_BuildingLabel">Building</string>
    <string name="payments_OtherLabel">Other</string>
    <string name="payments_MakePaymentButton">Make Payment</string>
    <string name="payments_TitheFieldHint">Enter amount to assign for Tithe</string>
    <string name="payments_OfferingFieldHint">Enter amount to assign for Offering</string>
    <string name="payments_BuildingFieldHint">Enter amount to assign for Building projects</string>
    <string name="payments_OtherFieldHint">Enter the amount and purpose breakdown</string>
    <string name="title_activity_tv_stream">TvStreamActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="payment_total_amount">Amount</string>
    <string name="payment_checkbox_tithe">Tithe</string>
    <string name="payment_checkbox_offering">Thanks Offering</string>
    <string name="payment_checkbox_building">Building</string>
    <string name="payment_checkbox_other">Other</string>
    <string name="payment_label_tithe">Tithe</string>
    <string name="payment_label_offering">Thanks Offering</string>
    <string name="payment_label_building">Building</string>
    <string name="payment_label_other">Other</string>
    <string name="payment_button_make_payment">Make Payment</string>
    <string name="payment_tithe_hint">Offering</string>
    <string name="payment_offering_hint">Offering</string>
    <string name="payment_building_hint">Offering</string>
    <string name="payment_other_hint">Offering</string>
    <string name="payment_manual">Manual Capture</string>
    <string name="payment_manual_ID">Transaction ID</string>
    <string name="payment_manual_hint">Transaction ID \'D...\'</string>
    <string name="payment_manual_hide">Use Automatic Capture</string>
</resources>
